# smacpp

./: .gitignore  .gitmodules  Benchmark.rb  CMakeLists.txt  LICENSE  Makefile  PreProcessData.rb  README.md  analysis_sequence_diagram.uxf  architecture_diagram.uxf
src/: CMakeLists.txt  main.cpp
src/analysis/: Analyzer.cpp  Analyzer.h  BlockRegistry.cpp  BlockRegistry.h
src/integration/: AnalyzerPlugin.cpp  ClangPlugin.cpp  SMACPPChecker.cpp  SMACPPChecker.h  SMACPPFinder.cpp  SMACPPFinder.h
src/parse/: ClangASTAction.h  ClangFrontendAction.cpp  ClangFrontendAction.h  CodeBlock.cpp  CodeBlock.h  CodeBlockBuildingVisitor.cpp  CodeBlockBuildingVisitor.h  ComplexExpressionParser.h  Condition.cpp  Condition.h  LiteralStateVisitor.h  MainASTConsumer.cpp  MainASTConsumer.h  ProcessedAction.cpp  ProcessedAction.h  Variable.cpp  Variable.h
test/: CMakeLists.txt  test_plugin_loading.cpp
